force-app/main/default/objects/ACNW_User_Permission__c/ACNW_User_Permission__c.object-meta.xml
<CustomObject>
    <label>User Permission</label>
    <nameField>
        <displayFormat>UP-{0000000}</displayFormat>
        <label>User Permission Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>User Permissions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>