force-app/main/default/objects/ACNW_User_Permission__c/fields/Permission__c.field-meta.xml
<CustomField>
    <fullName>Permission__c</fullName>
    <label>Permission</label>
    <referenceTo>ACNW_Permission__c</referenceTo>
    <relationshipLabel>User Permissions</relationshipLabel>
    <relationshipName>User_Permissions</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>