force-app/main/default/objects/ACNW_User_Permission__c/fields/Permission_Count__c.field-meta.xml
<CustomField>
    <fullName>Permission_Count__c</fullName>
    <description>Permission Count to keep track of how many times an approved permission set is used by an user.</description>
    <inlineHelpText>Permission Count to keep track of how many times an approved permission set is used by an user.</inlineHelpText>
    <label>Permission Count</label>
    <summaryForeignKey>ACNW_Request_Permission__c.User_Permission__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>