force-app/main/default/objects/ACNW_User_Permission__c/fields/Permission_Name__c.field-meta.xml
<CustomField>
    <fullName>Permission_Name__c</fullName>
    <description>Permission Name from related Master Object row</description>
    <formula>Permission__r.Name__c</formula>
    <label>Permission Name</label>
    <type>Text</type>
</CustomField>