force-app/main/default/objects/ACNW_User_Permission__c/fields/Unique_Key__c.field-meta.xml
<CustomField>
    <fullName>Unique_Key__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Unique Key</label>
    <length>100</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>