force-app/main/default/objects/ACNW_User_Permission__c/validationRules/User_is_required.validationRule-meta.xml
<ValidationRule>
    <fullName>User_is_required</fullName>
    <active>true</active>
    <errorConditionFormula>isblank(User__c)</errorConditionFormula>
    <errorDisplayField>User__c</errorDisplayField>
    <errorMessage>User is required</errorMessage>
</ValidationRule>