force-app/main/default/objects/ACNW_User_Permission__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Permission__c</columns>
    <columns>Permission_Name__c</columns>
    <columns>User__c</columns>
    <columns>Permission_Count__c</columns>
    <columns>Unique_Key__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>